# afterburner

./: .gitignore  README.md
.github/workflows/: linux-eic-shell.yml
beam_configs/: default.yaml
cpp/: CMakeLists.txt
cpp/abconv/: ArgumentProcessor.cc  ArgumentProcessor.hh  CMakeLists.txt  ConfigProvider.cc  ConfigProvider.hh  Converter.cc  Converter.hh  FileFormats.cc  YamlConfigFile.cc  YamlConfigFile.hh  main.cc
cpp/abconvert/: ArgumentProcessor.cc  ArgumentProcessor.hh  CMakeLists.txt  Converter.cc  Converter.hh  FileFormats.cc  FileFormats.hh  main.cc
cpp/afterburner/: Afterburner.cc  Afterburner.h  Afterburner.hh  AfterburnerConfig.cc  AfterburnerConfig.hh  CMakeLists.txt  EicConfigurator.cc  EicConfigurator.hh  Smearer.cc  Smearer.hh
cpp/benchmark/: ArgumentProcessor.cc  ArgumentProcessor.hh  CMakeLists.txt  Histogrammer.cc  Histogrammer.hh  main.cc
cpp/cmake/Modules/: FindCLHEP.cmake
cpp/convert/: CMakeLists.txt  cmdline.c  cmdline.h  convert_example.cc
cpp/test/: CMakeLists.txt  catch.cc  catch.hh  config.yaml  partial_config.json  test_catch.cpp  test_catch.hh  test_config.cpp  test_config.hh
python/: afterburner.hepmc.root  afterburner.hist.root  comparison.ipynb  full_eff.hepmc.root  full_eff.hist.root  gen_hepmc_event.py  no_effects.hepmc.root  no_effects.hist.root  test_abconv.py  zonly_event.hepmc
